# vulkan-wsi-layer

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  check_copyright.py  sysvk_icd.json
docs/: guidelines.md
layer/: VkLayer_window_system_integration.json  layer.cpp  present_timing.cpp  private_data.cpp  private_data.hpp  surface_api.cpp  surface_api.hpp  swapchain_api.cpp  swapchain_api.hpp  swapchain_maintenance_api.cpp  swapchain_maintenance_api.hpp  wsi_layer_experimental.hpp
util/: custom_allocator.cpp  custom_allocator.hpp  extension_list.cpp  extension_list.hpp  file_descriptor.hpp  format_modifiers.cpp  format_modifiers.hpp  helpers.hpp  log.cpp  log.hpp  macros.hpp  optional.hpp  platform_set.hpp  ring_buffer.hpp  timed_semaphore.cpp  timed_semaphore.hpp  unordered_map.hpp  unordered_set.hpp
util/drm/: drm_utils.cpp  drm_utils.hpp  format_table.c  format_table.h
util/wsialloc/: wsialloc.h  wsialloc_ion.c
wsi/: README.md  compatible_present_modes.hpp  external_memory.cpp  external_memory.hpp  frame_boundary.cpp  frame_boundary.hpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain_base.cpp  swapchain_base.hpp  synchronization.cpp  synchronization.hpp  wsi_factory.cpp  wsi_factory.hpp
wsi/display/: drm_display.cpp  drm_display.hpp  surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp
wsi/headless/: surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp
wsi/wayland/: surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp  swapchain_wl_helpers.cpp  swapchain_wl_helpers.hpp  wl_helpers.cpp  wl_helpers.hpp  wl_object_owner.hpp
wsi/x11/: surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp
